<resources>
    <string name="app_name">Frontdoor Assistant</string>
    <string name="success">Success</string>
    <string name="prompt_user_name">Username *</string>
    <string name="prompt_password">Password *</string>
    <string name="prompt_old_password">Old Password *</string>
    <string name="prompt_new_password">New Password *</string>
    <string name="prompt_confirm_password">Confirm Password *</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_cancel">Cancel</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="invalid_userName">Username can only have alphabetical characters and must be between 2 and 50 characters long</string>
    <string name="invalid_password">Password must be at least 6 characters long, and have at least one digit, one symbol, and one lowercase character</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="wrong_credentials">Wrong username and/or password</string>
    <string name="request_failed">Request failed</string>
    <string name="channel_id">"FRONTDOOR_ASSISTANT_BLACKLIST_CHANNEL_ID"</string>
    <string name="channel_name">"Frontdoor Assistant Blacklist Notification Channel"</string>
    <string name="channel_description">"Notification channel for Frontdoor Assistant Blacklist"</string>
    <string name="preference_file_key">iiotca.frontdoorassistant.PREFERENCE_FILE_KEY</string>
    <string name="preference_token">token</string>
    <string name="preference_refresh_token">refreshToken</string>
    <string name="prompt_settings">Review and manage your settings</string>
    <string name="title_settings">Settings</string>
    <string name="prompt_history">A history of people spotted at your door</string>
    <string name="title_history">History</string>
    <string name="prompt_blacklist">Review and edit your blacklist</string>
    <string name="title_blacklist">Blacklist</string>
    <string name="greeting">Welcome Home!</string>
    <string name="log_out">Log out</string>
    <string name="body_set_location">Set location to receive weather alerts at current location</string>
    <string name="title_set_location">Set location</string>
    <string name="session_expired_cannot_refresh">Session has expired and can not be refreshed. Please log in again</string>
    <string name="error_fetch_location">Error fetching location</string>
    <string name="please_allow_notifications">Please allow notifications through Android Settings</string>
    <string name="please_allow_location">Please allow location through Android Settings</string>
    <string name="please_allow_storage">Please allow read storage/media through Android Settings</string>
    <string name="remove_from_blacklist">Remove from blacklist</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_photos">Photos</string>
    <string name="select_photos">Select photos</string>
    <string name="done">Done</string>
    <string name="hide_unknown">Hide Unknown</string>
    <string name="show_unknown">Show Unknown</string>
</resources>